# CPlusPlusPrimer

./: .gitignore  CPlusPlusPrimer.pro
CMakeProjectWithMultiFiles/: CMakeLists.txt  CMakeLists.txt_manual  main.cpp
CMakeProjectWithMultiFiles/include/Shape/: Shape.h
CMakeProjectWithMultiFiles/include/Shape/Rectangle/: Rectangle.h  Square.h
CMakeProjectWithMultiFiles/include/Shape/Triangle/: Triangle.h
CMakeProjectWithMultiFiles/src/Shape/: Shape.cpp
CMakeProjectWithMultiFiles/src/Shape/Rectangle/: Rectangle.cpp  Square.cpp
CMakeProjectWithMultiFiles/src/Shape/Triangle/: Triangle.cpp
Chapter1/: .gitignore  Chapter1.pro
Chapter1/AFirstLookAtMemberFunctions/: main.cpp
Chapter1/Exercise1-10/: main.cpp
Chapter1/Exercise1-11/: main.cpp
Chapter1/Exercise1-12/: main.cpp
Chapter1/Exercise1-15/: main.cpp
Chapter1/Exercise1-16/: main.cpp
Chapter1/Exercise1-19/: main.cpp
Chapter1/Exercise1-20/: main.cpp
Chapter1/Exercise1-21/: main.cpp
Chapter1/Exercise1-22/: Exercise1-22.pro  main.cpp
Chapter1/Exercise1-23/: main.cpp
Chapter1/Exercise1-4/: main.cpp
Chapter1/Exercise1-5/: main.cpp
Chapter1/Exercise1-6/: main.cpp
Chapter1/Exercise1-8/: main.cpp
Chapter1/Exercise1-9/: main.cpp
Chapter1/FirstSimpleProgram/: main.cpp
Chapter1/ForStatement/: main.cpp
Chapter1/IfStatement/: main.cpp
Chapter1/ReadingAnUnknownNumberOfInputs/: main.cpp
Chapter2/: Chapter2.pro
HelloWorld/: main.cpp
HelloWorld/Animal/: Dog.cpp  (+3 more)
HelloWorldTest/: main.cpp
NormalProject/: main.cpp
NormalProjectWithMultiFiles/: main.cpp
OOP/: CMakeLists.txt  main.cpp
(+15 files in other folders)
